AC_INIT
AC_CONFIG_AUX_DIR(admin)


POP3FILTER_MAJOR_VERSION=0
POP3FILTER_MINOR_VERSION=5
POP3FILTER_MICRO_VERSION=3
POP3FILTER_VERSION=$POP3FILTER_MAJOR_VERSION.$POP3FILTER_MINOR_VERSION.$POP3FILTER_MICRO_VERSION

POP3FILTER_DATE="Aug 3 2003"
VERSION=$POP3FILTER_VERSION
PACKAGE=pop3filter

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_CONFIG_HEADER(config.h)
AC_PREFIX_DEFAULT(/usr/local)

CFLAGS="-ansi -pedantic -Wall -pedantic-errors $CFLAGS"
AC_ARG_ENABLE(debug,
  [  --enable-debug        creates debugging code],
  [  pop3filter_use_debug="$enableval"],[pop3filter_use_debug="no"])

  CFLAGS=`echo $CFLAGS | sed s/-g//`
  if test "$pop3filter_use_debug" = "yes"; then
        CFLAGS="$CFLAGS -g"
  fi

# Build time sanity check...
AM_SANITY_CHECK

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB
AC_ISC_POSIX

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(
	[limits.h netdb.h netinet/in.h stdlib.h string.h sys/file.h sys/socket.h sys/time.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_C_SOCKLEN_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STRTOD
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([dup2 gethostbyname memset select setenv socket strchr strdup strerror strtol])

AC_SUBST(PACKAGE)
AC_SUBST(POP3FILTER_VERSION)
AC_SUBST(POP3FILTER_DATE)

AC_OUTPUT([
Makefile
pop3filter.1
lib/Makefile
lib/libcrash/Makefile
src/Makefile
bin/Makefile
doc/Makefile])


echo
echo "pop3filter configure report:"
echo
echo "     CFLAGS                        : $CFLAGS"
echo "     LIBS                          : $LIBS"
echo "     Locales in use                : $ALL_LINGUAS"
echo "==============================================================="
echo
echo "Type \"make\" to compile pop3filter."
echo

